--- a/about.html
+++ b/about.html
@@ -48,10 +48,10 @@ in html
             </tr>
           </table>
           <ul>
-            <li>Video games: I own four consoles and like all kind of games but my favorite is The Legend of Zelda</li>
-            <li>Soccer: I am part of a team and we play every Saturday. I'm the goalie</li>
-            <li>Music: I love all kind of music but my favorite is R&B and pop</li>
-            <li>Programming: I spend at least two hours every day using and learning programming languages</li>
+            <li><span class="hobby">Video games</span>: I own four consoles and like all kind of games but my favorite is The Legend of Zelda</li>
+            <li><span class="hobby">Soccer</span>: I am part of a team and we play every Saturday. I'm the goalie</li>
+            <li><span class="hobby">Music</span>: I love all kind of music but my favorite is R&B and pop</li>
+            <li><span class="hobby">Programming</span>: I spend at least two hours every day using and learning programming languages</li>
           </ul>
         </div>
         
