fixed some stuff

--- a/about.html
+++ b/about.html
@@ -47,6 +47,10 @@ in html
               <td>C++</td>
               <td>2</td>
             </tr>
+            <tr class="table-row">
+              <td>PHP</td>
+              <td>1</td>
+            </tr>
           </table>
           <br /><br />
           <ul>
