fixed some stuff

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@ in html
         <hr />
         <nav>
           <a href="index.php">Home</a>
-          <a id="active" href="about.html">About</a>
+          <a class="active" href="about.html">About</a>
           <a href="contact.html">Contact</a>
         </nav>
         <br /><br />
