--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@ in html
         <nav>
           <a href="index.php">Home</a>
           <a href="about.html">About</a>
-          <a id="active" href="contact.html">Contact</a>
+          <a class="active" href="contact.html">Contact</a>
         </nav>
         <br /><br />
       
