fixed some stuff

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@ in html
               CST336 Internet Programming. 2019&copy Shea <br />
               <strong>Disclaimer:</strong> The information on this website is fake. <br />
               It is for academic purposes only. 
-            <img src="img/logo.png" alt="CSUMB Logo" />
+            <img id="logo" src="img/logo.png" alt="CSUMB Logo" />
         </footer>
         <!-- closing footer -->
         
